# Lumen

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  TODO.md
compiler/: .gitignore  Cargo.toml  build.rs
compiler/runtime/: lumen_rt.c
compiler/src/: ast.rs  builtins.rs  codegen.rs  defaults.rs  desugar.rs  escape.rs  ffi.rs  http.rs  imports.rs  interp.rs  lexer.rs  lib.rs  lift.rs  llvm.rs  llvmgen.rs  main.rs  mir.rs  net.rs  opt.rs  parser.rs  pkg.rs  toolchain.rs  types.rs
compiler/tests/: integration.rs
docs/: README.md
docs/lumen/: ffi.md  limitations.md  memory.md  overview.md  performance.md  running.md  two-backends.md
docs/plans/: 2026-06-03-perf-targeted-wins.md  2026-06-03-ssa-mir-regalloc.md
docs/syntax/: basics.md  control-flow.md  errors.md  functions.md  imports.md  lists.md  maps.md  stdlib.md  strings.md  structs.md  values.md  variables.md
examples/: 01_hello.lm  02_variables.lm  03_control_flow.lm  04_operators.lm  05_strings.lm  06_lists.lm  07_maps.lm  08_functions.lm  09_structs.lm  10_errors.lm  11_uncaught.lm  12_modules.lm  13_math.lm  14_data.lm  15_system.lm  16_files.lm  17_ffi_float.lm  18_cbuf.lm  19_net.lm  20_defaults.lm  21_maps.lm  22_numkeys.lm  23_optfix.lm  24_intlist.lm  25_intaccum.lm  26_modpow2.lm  40_str_methods.lm  41_match.lm  42_destructure.lm  43_enum.lm  44_map_items.lm  greet.lm
examples/DirectX/: d2d_demo.lm
examples/callback/: callback_demo.lm
examples/com/: com_demo.lm
examples/project/: main.lm  report.lm
examples/relimports/: main.lm  shared.lm
examples/stocksim/: main.lm  market.lm  (+4 more)
(+7 files in other folders)
